<resources>
    <string name="app_name">NotesApp</string>

    <string name="title_create_account">Create Account</string>
    <string name="title_register">REGISTER</string>

    <string name="hint_full_name">FULL NAME</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>

    <string name="msg_required_name">Name is required</string>
    <string name="msg_required_email">Email is required</string>
    <string name="msg_required_valid_email">Email address is invalid</string>
    <string name="msg_required_password">Password is required</string>
    <string name="msg_required_password_length">Password must be 6 character long</string>
</resources>